// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`filmstrip static render > matches the reference frames for Basic 8th note beat 1`] = `
"One
....
..●.
....
..●.

a
....
..●.
....
....

Two
....
..●.
..●.
....

a
....
..●.
....
....

Three
....
..●.
....
..●.

a
....
..●.
....
....

Four
....
..●.
..●.
....

a
....
..●.
....
...."
`;

exports[`filmstrip static render > matches the reference frames for Basic 16th note beat 1`] = `
"One
....
..●.
....
..●.

e
....
◆...
....
....

&
....
..●.
....
....

a
....
◆...
....
....

Two
....
..●.
..●.
....

e
....
◆...
....
....

&
....
..●.
....
....

a
....
◆...
....
....

Three
....
..●.
....
..●.

e
....
◆...
....
....

&
....
..●.
....
....

a
....
◆...
....
....

Four
....
..●.
..●.
....

e
....
◆...
....
....

&
....
..●.
....
....

a
....
◆...
....
...."
`;

exports[`filmstrip static render > matches the reference frames for Variation #1 1`] = `
"One
....
..●.
....
..●.

a
....
..●.
....
....

Two
....
..●.
..●.
....

a
....
..●.
....
....

Three
....
..●.
....
..●.

a
....
..●.
....
..●.

Four
....
..●.
..●.
....

a
....
.●..
....
..●."
`;
